@@ -19,6 +19,25 @@
   <url type="bugtracker">https://github.com/mike-fabian/ibus-typing-booster/issues</url>
   <url type="help">https://mike-fabian.github.io/ibus-typing-booster/documentation.html</url>
   <releases>
+    <release version="2.2.0" date="2018-11-21" urgency="medium">
+      <description>
+        <ul>
+          <li>
+            Update translations from zanata (de updated)
+          </li>
+          <li>
+            Save some screen space in the setup tool
+          </li>
+          <li>
+            Add inline completion feature
+          </li>
+          <li>
+            Tab should force a lookup when the minimum number of
+            characters is not yet reached
+          </li>
+        </ul>
+      </description>
+    </release>
     <release version="2.1.3" date="2018-10-08" urgency="medium">
       <description>
         <ul>
