@@ -1,4 +1,11 @@
 * Author: Mike FABIAN <mfabian@redhat.com>
+* 21 Nov 2018 Released 2.2.0 version
+* Update translations from zanata (de updated)
+* Save some screen space in the setup tool
+* Add inline completion feature
+* Tab should force a lookup when the minimum number of characters is not yet reached
+
+* Author: Mike FABIAN <mfabian@redhat.com>
 * 08 Oct 2018 Released 2.1.3 version
 * Update translations from zanata (uk updated)
 
